--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -43,6 +43,7 @@ MultipleInstanceLastHeight=720
 MultipleInstanceLastWidth=1280
 LastExecutedLaunchDevice=WindowsNoEditor@BEHEMOTH
 LastExecutedLaunchName=BEHEMOTH
+NewWindowPosition=(X=195,Y=133)
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 bInvertMouseLookYAxis=False
@@ -87,7 +88,7 @@ AssetPropertyPicker.CurrentViewType=0
 LastLevel=/Game/Maps/MainMap
 
 [ModuleFileTracking]
-Alpha.TimeStamp=2016.12.16-17.13.52
+Alpha.TimeStamp=2016.12.17-01.15.34
 Alpha.LastCompileMethod=External
 PakFile.TimeStamp=2016.11.15-23.49.23
 PakFile.LastCompileMethod=Unknown
@@ -573,10 +574,11 @@ ExternalImagePicker.TimeStamp=2016.11.06-17.31.06
 ExternalImagePicker.LastCompileMethod=Unknown
 
 [AssetEditorManager]
-CleanShutdown=True
+CleanShutdown=False
+OpenAssetsAtExit=/Game/Maps/MainMap.MainMap:PersistentLevel.MainMap
 
 [MessageLog]
-LastLogListing=MapCheck
+LastLogListing=LoadErrors
 
 [RootWindow]
 ScreenPosition=X=56.000 Y=17.000
@@ -847,6 +849,10 @@ MaterialExpressionTextureCoordinate.MaterialExpressionTextureCoordinate=True
 MaterialExpressionTextureCoordinate.MaterialExpression=True
 MaterialExpressionRotator.MaterialExpressionRotator=True
 MaterialExpressionRotator.MaterialExpression=True
+MainMap_C.Tick=True
+MainMap_C.Replication=True
+MainMap_C.Input=True
+MainMap_C.Actor=True
 
 [WorldBrowser]
 DisplayPaths=False
