Fixed UI Scaling Issue

--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -43,7 +43,8 @@ MultipleInstanceLastHeight=720
 MultipleInstanceLastWidth=1280
 LastExecutedLaunchDevice=WindowsNoEditor@BEHEMOTH
 LastExecutedLaunchName=BEHEMOTH
-NewWindowPosition=(X=195,Y=133)
+NewWindowPosition=(X=-8,Y=-8)
+LastExecutedPlayModeType=PlayMode_InEditorFloating
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
 bInvertMouseLookYAxis=False
@@ -580,8 +581,9 @@ SequencerWidgets.TimeStamp=2016.11.16-10.14.16
 SequencerWidgets.LastCompileMethod=Unknown
 
 [AssetEditorManager]
-CleanShutdown=True
-OpenAssetsAtExit=/Game/UI/menu_Credits.menu_Credits
+CleanShutdown=False
+OpenAssetsAtExit=/Game/Maps/MainMap.MainMap:PersistentLevel.MainMap
+OpenAssetsAtExit=/Game/UI/menu_Pause.menu_Pause
 
 [MessageLog]
 LastLogListing=LoadErrors
@@ -956,6 +958,27 @@ menu_Pause_C.Render Transform=True
 menu_Pause_C.Navigation=True
 K2Node_VariableGet.Variable=True
 K2Node_VariableGet.Events=True
+Widget.Layout=True
+K2Node_InputKey.Input=True
+K2Node_InputKey.Modifier=True
+ui_Action_Defense_C.Appearance=True
+ui_Action_Defense_C.Interaction=True
+ui_Action_Defense_C.Input=True
+ui_Action_Defense_C.Behavior=True
+ui_Action_Defense_C.Performance=True
+ui_Action_Defense_C.Render Transform=True
+ui_Action_Defense_C.Navigation=True
+menu_Exit_C.Appearance=True
+menu_Exit_C.Interaction=True
+menu_Exit_C.Input=True
+menu_Exit_C.Designer=True
+menu_Exit_C.Layout=True
+menu_Exit_C.Behavior=True
+menu_Exit_C.Performance=True
+menu_Exit_C.Render Transform=True
+menu_Exit_C.Navigation=True
+BoolProperty.Variable=True
+BoolProperty.DefaultValueCategory=True
 
 [WorldBrowser]
 DisplayPaths=False
@@ -1057,6 +1080,14 @@ PrimType=1
 /Game/UI/menu_Credits.menu_Credits=0
 /Game/UI/ui_Plan_Offense.ui_Plan_Offense=0
 /Game/Geometry/Meshes/Adv_Troop_mesh.Adv_Troop_mesh=1
+/Game/UI/menu_Join.menu_Join=0
+/Game/UI/menu_Exit.menu_Exit=0
+/Game/UI/menu_Create.menu_Create=0
+/Game/UI/menu_Pause.menu_Pause=0
+/Game/UI/menu_Main.menu_Main=0
+/Game/UI/ui_Action_Defense.ui_Action_Defense=0
+/Game/UI/ui_Action_Offense.ui_Action_Offense=0
+/Game/UI/ui_Plan_Defense.ui_Plan_Defense=0
 
 [ColorPickerUI]
 bSRGBEnabled=False
