--- a/Config/DefaultInput.ini
+++ b/Config/DefaultInput.ini
@@ -1,3 +1,4 @@
+
 [/Script/Engine.InputSettings]
 -AxisConfig=(AxisKeyName="Gamepad_LeftX",AxisProperties=(DeadZone=0.25,Exponent=1.f,Sensitivity=1.f))
 -AxisConfig=(AxisKeyName="Gamepad_LeftY",AxisProperties=(DeadZone=0.25,Exponent=1.f,Sensitivity=1.f))
@@ -35,17 +36,16 @@ DoubleClickTime=0.200000
 bCaptureMouseOnLaunch=True
 DefaultViewportMouseCaptureMode=CapturePermanently_IncludingInitialMouseDown
 bDefaultViewportMouseLock=True
-+ActionMappings=(ActionName="SetDestination",Key=LeftMouseButton,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
-+ActionMappings=(ActionName="SetDestination",Key=MotionController_Right_Trigger,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
-+ActionMappings=(ActionName="SetDestination",Key=Gamepad_RightTrigger,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
-+ActionMappings=(ActionName="ResetVR",Key=R,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
-+ActionMappings=(ActionName="ResetVR",Key=MotionController_Left_Grip1,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
-+AxisMappings=(AxisName="MoveForward",Key=W,Scale=1.000000)
-+AxisMappings=(AxisName="MoveForward",Key=S,Scale=-1.000000)
-+AxisMappings=(AxisName="MoveRight",Key=D,Scale=1.000000)
-+AxisMappings=(AxisName="MoveRight",Key=A,Scale=-1.000000)
-+AxisMappings=(AxisName="TurnRate",Key=MotionController_Right_Thumbstick_X,Scale=1.000000)
-+AxisMappings=(AxisName="TurnRate",Key=Gamepad_RightX,Scale=1.000000)
+DefaultViewportMouseLockMode=LockOnCapture
++ActionMappings=(ActionName="WheelMouseUp",Key=MouseScrollUp,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="WheelMouseDown",Key=MouseScrollDown,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++ActionMappings=(ActionName="RotateCamera",Key=RightMouseButton,bShift=False,bCtrl=False,bAlt=False,bCmd=False)
++AxisMappings=(AxisName="MoveForward",Key=W,Scale=2.000000)
++AxisMappings=(AxisName="MoveForward",Key=S,Scale=-2.000000)
++AxisMappings=(AxisName="MoveRight",Key=D,Scale=2.000000)
++AxisMappings=(AxisName="MoveRight",Key=A,Scale=-2.000000)
++AxisMappings=(AxisName="MouseX",Key=MouseX,Scale=1.000000)
++AxisMappings=(AxisName="MouseY",Key=MouseY,Scale=1.000000)
 bAlwaysShowTouchInterface=False
 bShowConsoleOnFourFingerTap=True
 DefaultTouchInterface=None
