--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -43,7 +43,7 @@ MultipleInstanceLastHeight=720
 MultipleInstanceLastWidth=1280
 LastExecutedLaunchDevice=WindowsNoEditor@BEHEMOTH
 LastExecutedLaunchName=BEHEMOTH
-NewWindowPosition=(X=315,Y=143)
+NewWindowPosition=(X=195,Y=133)
 LastExecutedPlayModeType=PlayMode_InEditorFloating
 
 [/Script/UnrealEd.LevelEditorViewportSettings]
@@ -66,7 +66,7 @@ PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport2",ConfigSettin
 PerInstanceSettings=(ConfigName="FourPanes2x2.Viewport 1.Viewport3",ConfigSettings=(ViewportType=LVT_OrthoXY,PerspViewModeIndex=VMI_Lit,OrthoViewModeIndex=VMI_BrushWireframe,EditorShowFlagsString="PostProcessing=0,Bloom=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,ReflectionOverride=0,VisualizeBuffer=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,GBufferHints=0,MotionBlur=1,CompositeEditorPrimitives=1,TestImage=0,VisualizeDOF=0,VisualizeAdaptiveDOF=0,VertexColors=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,SeparateTranslucency=1,ScreenPercentage=1,VisualizeMotionBlur=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=1,ScreenSpaceReflections=1,SubsurfaceScattering=1,VisualizeSSS=0,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,Tessellation=1,InstancedStaticMeshes=1,InstancedFoliage=1,InstancedGrass=1,DynamicShadows=1,Particles=1,SkeletalMeshes=1,SkinCache=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,CameraFrustums=0,AudioRadius=1,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=1,BSPTriangles=0,LargeVertices=0,Grid=1,Snap=0,MeshEdges=0,Cover=0,Splines=1,Selection=1,ModeWidgets=1,Bounds=0,HitProxies=0,PropertyColoration=0,LightInfluences=0,Pivot=1,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=1,Fog=1,Volumes=1,Game=0,LevelColoration=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,AtmosphericFog=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HighResScreenshotMask=0,HMDDistortion=1,StereoRendering=0,DistanceCulledPrimitives=1,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,VisualizeLPV=0,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VolumeLightingSamples=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeDistanceFieldGI=0,VisualizeMeshDistanceFields=0,ScreenSpaceAO=1,DistanceFieldAO=1,DistanceFieldGI=1,VisualizeSSR=0,VisualizeShadingModels=0,VisualizeSenses=1,VisualizeBloom=0,LODColoration=0,HLODColoration=0,QuadOverdraw=0,ShaderComplexityWithQuadOverdraw=0,PrimitiveDistanceAccuracy=0,MeshTexCoordSizeAccuracy=0,MaterialTexCoordScalesAccuracy=0,MaterialTexCoordScalesAnalysis=0",GameShowFlagsString="PostProcessing=0,Bloom=1,Tonemapper=1,AntiAliasing=1,TemporalAA=1,AmbientCubemap=1,EyeAdaptation=1,VisualizeHDR=0,LensFlares=1,GlobalIllumination=1,Vignette=1,Grain=1,AmbientOcclusion=1,Decals=1,CameraImperfections=1,OnScreenDebug=1,OverrideDiffuseAndSpecular=0,ReflectionOverride=0,VisualizeBuffer=0,DirectLighting=1,DirectionalLights=1,PointLights=1,SpotLights=1,ColorGrading=1,VectorFields=0,DepthOfField=1,GBufferHints=0,MotionBlur=1,CompositeEditorPrimitives=1,TestImage=0,VisualizeDOF=0,VisualizeAdaptiveDOF=0,VertexColors=0,Refraction=1,CameraInterpolation=1,SceneColorFringe=1,SeparateTranslucency=1,ScreenPercentage=1,VisualizeMotionBlur=0,ReflectionEnvironment=1,VisualizeOutOfBoundsPixels=0,Diffuse=1,Specular=1,SelectionOutline=0,ScreenSpaceReflections=1,SubsurfaceScattering=1,VisualizeSSS=0,IndirectLightingCache=1,DebugAI=0,VisLog=1,Navigation=0,GameplayDebug=1,TexturedLightProfiles=1,LightFunctions=1,Tessellation=1,InstancedStaticMeshes=1,InstancedFoliage=1,InstancedGrass=1,DynamicShadows=1,Particles=1,SkeletalMeshes=1,SkinCache=1,BuilderBrush=1,Translucency=1,BillboardSprites=1,LOD=1,LightComplexity=0,ShaderComplexity=0,StationaryLightOverlap=0,LightMapDensity=0,StreamingBounds=0,Constraints=0,CameraFrustums=0,AudioRadius=0,BSPSplit=0,Brushes=1,Lighting=1,DeferredLighting=1,Editor=0,BSPTriangles=0,LargeVertices=0,Grid=0,Snap=0,MeshEdges=0,Cover=0,Splines=0,Selection=0,ModeWidgets=0,Bounds=0,HitProxies=0,PropertyColoration=0,LightInfluences=0,Pivot=0,ShadowFrustums=0,Wireframe=1,Materials=1,StaticMeshes=1,Landscape=1,LightRadius=0,Fog=1,Volumes=0,Game=1,LevelColoration=0,BSP=1,Collision=0,CollisionVisibility=0,CollisionPawn=0,LightShafts=1,PostProcessMaterial=1,AtmosphericFog=1,CameraAspectRatioBars=0,CameraSafeFrames=0,TextRender=1,Rendering=1,HighResScreenshotMask=0,HMDDistortion=1,StereoRendering=0,DistanceCulledPrimitives=0,VisualizeLightCulling=0,PrecomputedVisibility=1,SkyLighting=1,VisualizeLPV=0,PreviewShadowsIndicator=1,PrecomputedVisibilityCells=0,VolumeLightingSamples=0,Paper2DSprites=1,VisualizeDistanceFieldAO=0,VisualizeDistanceFieldGI=0,VisualizeMeshDistanceFields=0,ScreenSpaceAO=1,DistanceFieldAO=1,DistanceFieldGI=1,VisualizeSSR=0,VisualizeShadingModels=0,VisualizeSenses=1,VisualizeBloom=0,LODColoration=0,HLODColoration=0,QuadOverdraw=0,ShaderComplexityWithQuadOverdraw=0,PrimitiveDistanceAccuracy=0,MeshTexCoordSizeAccuracy=0,MaterialTexCoordScalesAccuracy=0,MaterialTexCoordScalesAnalysis=0",BufferVisualizationMode=,ExposureSettings=(LogOffset=0,bFixed=False),FOVAngle=90.000000,FarViewPlane=0.000000,bIsRealtime=True,bShowFPS=False,bShowStats=False,EnabledStats=,bShowFullToolbar=True))
 
 [ContentBrowser]
-ContentBrowserTab1.SelectedPaths=/Game
+ContentBrowserTab1.SelectedPaths=/Game/UI
 ContentBrowserTab1.SourcesExpanded=True
 ContentBrowserTab1.Locked=False
 ContentBrowserTab1.VerticalSplitter.SlotSize0=0.250000
@@ -89,7 +89,7 @@ AssetPropertyPicker.CurrentViewType=0
 LastLevel=/Game/Maps/MainMap
 
 [ModuleFileTracking]
-Alpha.TimeStamp=2016.12.17-01.15.34
+Alpha.TimeStamp=2017.01.20-03.42.15
 Alpha.LastCompileMethod=External
 PakFile.TimeStamp=2016.11.16-10.07.03
 PakFile.LastCompileMethod=External
@@ -569,8 +569,8 @@ StaticMeshEditor.TimeStamp=2016.11.16-10.18.11
 StaticMeshEditor.LastCompileMethod=External
 TextureEditor.TimeStamp=2016.11.06-17.31.16
 TextureEditor.LastCompileMethod=Unknown
-SynthBenchmark.TimeStamp=2016.11.06-17.31.16
-SynthBenchmark.LastCompileMethod=Unknown
+SynthBenchmark.TimeStamp=2016.11.16-10.19.05
+SynthBenchmark.LastCompileMethod=External
 ExternalImagePicker.TimeStamp=2016.11.06-17.31.06
 ExternalImagePicker.LastCompileMethod=Unknown
 BlueprintProfiler.TimeStamp=2016.11.16-09.35.54
@@ -582,14 +582,15 @@ SequencerWidgets.LastCompileMethod=Unknown
 
 [AssetEditorManager]
 CleanShutdown=True
+OpenAssetsAtExit=/Game/Maps/MainMap.MainMap:PersistentLevel.MainMap
 
 [MessageLog]
 LastLogListing=LoadErrors
 
 [RootWindow]
-ScreenPosition=X=207.000 Y=0.000
-WindowSize=X=1587.000 Y=1040.000
-InitiallyMaximized=False
+ScreenPosition=X=-34.000 Y=513.000
+WindowSize=X=1597.000 Y=1050.000
+InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
 Viewport 1.LayoutType=FourPanes2x2
@@ -605,7 +606,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=E:/Github/Alpha_Build/Content/Maps
+UNR=../../../../../../Users/Bobby/Desktop/Alpha_Build/Content/Maps
 BRUSH=../../../../../../Users/Sean/Documents/Unreal Projects/Alpha/Content/
 FBX=../../../../../../Users/Sean/Documents/Unreal Projects/Alpha/Content/
 FBXAnim=../../../../../../Users/Sean/Documents/Unreal Projects/Alpha/Content/
@@ -1009,6 +1010,26 @@ Pawn_Camera_C.Actor=True
 ObjectProperty.DefaultValueCategory=True
 K2Node_VariableSet.Events=True
 K2Node_VariableGet.DefaultValueCategory=True
+TextBlock.Localization=False
+ui_Action_Offense_C.Appearance=True
+ui_Action_Offense_C.Interaction=True
+ui_Action_Offense_C.Input=True
+ui_Action_Offense_C.Designer=True
+ui_Action_Offense_C.Layout=True
+ui_Action_Offense_C.Behavior=True
+ui_Action_Offense_C.Performance=True
+ui_Action_Offense_C.Render Transform=True
+ui_Action_Offense_C.Navigation=True
+menu_Credits_C.Appearance=True
+menu_Credits_C.Interaction=True
+menu_Credits_C.Input=True
+menu_Credits_C.Designer=True
+menu_Credits_C.Layout=True
+menu_Credits_C.Behavior=True
+menu_Credits_C.Performance=True
+menu_Credits_C.Render Transform=True
+menu_Credits_C.Navigation=True
+K2Node_CustomEvent.GraphNodeDetail=True
 
 [WorldBrowser]
 DisplayPaths=False
@@ -1051,8 +1072,8 @@ MaterialInterface="\"Object.Lightmass.LightmassSettings\" "
 BlockingVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 CameraBlockingVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 EditableTextBox="\"Object.Style.WidgetStyle\" "
-Widget="\"Object.Appearance.Brush\" "
-Visual="\"Object.Appearance.Brush\" "
+Widget=
+Visual=
 Image="\"Object.Appearance.Brush\" "
 
 [SelectionDetails]
@@ -1084,6 +1105,7 @@ DirectionalLight.Light=True
 PreviewMaterial.Translucency=True
 GameMapsSettings.DefaultModes=True
 GameMapsSettings.DefaultMaps=False
+TextBlock.Wrapping=False
 
 [MaterialEditor]
 LightDir=P=-39.999985 Y=27.499983 R=0.000000
