--- a/Saved/Config/Windows/EditorPerProjectUserSettings.ini
+++ b/Saved/Config/Windows/EditorPerProjectUserSettings.ini
@@ -91,7 +91,7 @@ AssetDialog.CurrentViewType=1
 LastLevel=/Game/Maps/MainMap
 
 [ModuleFileTracking]
-Alpha.TimeStamp=2017.01.29-01.52.26
+Alpha.TimeStamp=2017.02.16-02.30.27
 Alpha.LastCompileMethod=External
 PakFile.TimeStamp=2017.01.29-00.05.55
 PakFile.LastCompileMethod=External
@@ -590,7 +590,7 @@ LastLogListing=LoadErrors
 
 [RootWindow]
 ScreenPosition=X=156.000 Y=0.000
-WindowSize=X=1607.000 Y=1040.000
+WindowSize=X=1627.000 Y=1040.000
 InitiallyMaximized=True
 
 [SlateAdditionalLayoutConfig]
@@ -607,7 +607,7 @@ FourPanes2x2.Viewport 1.bIsMaximized=True
 FourPanes2x2.Viewport 1.MaximizedViewport=FourPanes2x2.Viewport 1.Viewport1
 
 [Directories2]
-UNR=../../../../../../Users/Jeremiah/Documents/GitHub/Alpha_Build/Content/Maps
+UNR=G:/GitHub/Alpha_Build/Content/Maps
 BRUSH=../../../../../../Users/Sean/Documents/Unreal Projects/Alpha/Content/
 FBX=../../../../../../Users/Sean/Documents/Unreal Projects/Alpha/Content/
 FBXAnim=../../../../../../Users/Sean/Documents/Unreal Projects/Alpha/Content/
@@ -1147,17 +1147,17 @@ Material="\"Object.Lightmass.LightmassSettings\" "
 MaterialInterface="\"Object.Lightmass.LightmassSettings\" "
 BlockingVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
 CameraBlockingVolume="\"Object.BrushBuilder.BrushBuilder.Object.BrushSettings\" "
-EditableTextBox="\"Object.Style.WidgetStyle\" \"Object.Layout.Slot.Object.Layout.Layout|Canvas Slot.LayoutData.Anchors\" \"Object.Layout.Slot.Object.Layout.Layout|Canvas Slot.LayoutData.Alignment\" "
+EditableTextBox="\"Object.Style.WidgetStyle\" \"Object.Layout.Slot.Object.Layout.Layout"
 Widget="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
 Visual="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
 Image="\"Object.Appearance.Brush\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
 EditorLoadingSavingSettings="\"Object.AutoReimport\" \"Object.Blueprints\" \"Object.AutoSave\" "
 HorizontalBox="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
-PanelWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Layout.Slot.Object.Layout.Layout|Canvas Slot.LayoutData.Anchors\" \"Object.Layout.Slot.Object.Layout.Layout|Canvas Slot.LayoutData.Alignment\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
-TextBlock="\"Object.Layout.Slot.Object.Layout.Layout|Canvas Slot.LayoutData.Anchors\" \"Object.Layout.Slot.Object.Layout.Layout|Canvas Slot.LayoutData.Alignment\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
-TextLayoutWidget="\"Object.Layout.Slot.Object.Layout.Layout|Canvas Slot.LayoutData.Anchors\" \"Object.Layout.Slot.Object.Layout.Layout|Canvas Slot.LayoutData.Alignment\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
-Button="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Layout.Slot.Object.Layout.Layout|Canvas Slot.LayoutData.Anchors\" \"Object.Layout.Slot.Object.Layout.Layout|Canvas Slot.LayoutData.Alignment\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
-ContentWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Layout.Slot.Object.Layout.Layout|Canvas Slot.LayoutData.Anchors\" \"Object.Layout.Slot.Object.Layout.Layout|Canvas Slot.LayoutData.Alignment\" \"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
+PanelWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Layout.Slot.Object.Layout.Layout"
+TextBlock="\"Object.Layout.Slot.Object.Layout.Layout"
+TextLayoutWidget="\"Object.Layout.Slot.Object.Layout.Layout"
+Button="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Layout.Slot.Object.Layout.Layout"
+ContentWidget="\"Object.Appearance.WidgetStyle\" \"Object.Appearance.WidgetStyle.Normal\" \"Object.Appearance.WidgetStyle.Hovered\" \"Object.Layout.Slot.Object.Layout.Layout"
 Overlay="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
 CanvasPanel="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
 NewGameMenu_C="\"Object.Render Transform.RenderTransform\" \"Object.Render Transform.RenderTransform.Scale\" "
